# kmouse

./: :W  ;  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
resources/: kmouse.desktop
src/: app.rs  config.rs  error.rs  main.rs  refactored-kmouse.js
src/input/: keyboard.rs  mod.rs  mouse.rs
src/models/: cell.rs  margin.rs  mod.rs
src/system/: mod.rs  x11.rs
src/ui/: grid.rs  mod.rs
